// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQCNHC_gsbYdgIEdS3sZuFhh8iGxaULrLhD6WT9orv_EAh1J"`;

exports[`feature-random should implement random correctly 2`] = `"kQAuy3r1TgG3v-j0exHRdt7jHFi0YFJh1QubzZ75hfE8jlXy"`;

exports[`feature-random should implement random correctly 3`] = `"kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQCNHC_gsbYdgIEdS3sZuFhh8iGxaULrLhD6WT9orv_EAh1J",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 18651n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCNHC_gsbYdgIEdS3sZuFhh8iGxaULrLhD6WT9orv_EAh1J",
        "to": "kQAuy3r1TgG3v-j0exHRdt7jHFi0YFJh1QubzZ75hfE8jlXy",
        "type": "internal",
        "value": 9968528000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCNHC_gsbYdgIEdS3sZuFhh8iGxaULrLhD6WT9orv_EAh1J",
      "to": "kQAuy3r1TgG3v-j0exHRdt7jHFi0YFJh1QubzZ75hfE8jlXy",
      "type": "internal",
      "value": 9968528000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 16479n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAuy3r1TgG3v-j0exHRdt7jHFi0YFJh1QubzZ75hfE8jlXy",
        "to": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
        "type": "internal",
        "value": 9942996000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAuy3r1TgG3v-j0exHRdt7jHFi0YFJh1QubzZ75hfE8jlXy",
      "to": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
      "type": "internal",
      "value": 9942996000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 16090n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
        "to": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
        "type": "internal",
        "value": 9917845000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
      "to": "kQAZY9aAs6huDvbenWb3HU8STKA_Nla_qiwWZtVr99xerinM",
      "type": "internal",
      "value": 9917845000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 3535n,
    "type": "processed",
  },
]
`;
